# the-foo-bar

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml
migrations/2021-06-02-021717_create_posts/: up.sql
migrations/2021-06-07-002822_create_posts/: up.sql
migrations/2021-06-09-214534_create_users/: up.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  schema.rs
src/db/: mod.rs  posts.rs  users.rs
src/models/: post.rs  user.rs
src/routes/: mod.rs  oauth.rs  posts.rs  users.rs
tests/: helpers.rs  mod.rs  posts.rs  users.rs
