[package]
edition = "2018"
license = "Apache-2.0"
name = "the-foo-bar"
repository = "https://github.com/Xulder/the-foo-bar"
version = "0.1.0"

[dependencies]
anyhow = "1.0.40"
argon2 = "0.2.1"
chrono = "0.4.19"
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
http = "0.2.4"
rustls = "0.19.1"
hyper-sync-rustls = "0.3.0-rc.17"
jsonwebtoken = "8.0.0-beta.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rocket = "0.4.10"
rocket_codegen = "0.4.10"
rocket_oauth2 = "0.4.1"
rocket_cors = "0.5.2"
serde_json = "1.0.64"
slug = "0.1.4"
thiserror = "1.0.25"
validator = "0.13.0"
validator_derive = "0.13.0"

[dependencies.hyper]
features = ["client", "http2"]
version = "0.14.9"

[dependencies.diesel]
features = ["postgres", "chrono", "uuid"]
version = "1.4.6"

[dependencies.rand_core]
features = ["std"]
version = "0.6"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "diesel_postgres_pool"]
version = "0.4.10"

[dependencies.serde]
features = ["derive"]
version = "1.0.103"

[dev-dependencies]
once_cell = "1.7.2"
